--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.13.7",
     "multer": "^1.4.3",
+    "socket.io": "^4.1.3",
     "uuid": "^8.3.2"
   },
   "devDependencies": {
